--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "base-64": "^0.1.0",
     "expo": "~37.0.3",
     "firebase": "^7.15.0",
+    "lodash": "^4.17.15",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -21,6 +23,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "^2.8.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
